--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@ var SwitchGizmo = function () {
 }
 
 var StlOutPutId = 1;
+var AnimalId = getRand(1,999);
 
 var createScene = async function () {
 
 
-  var AnimalId = getRand(1,999);
+  
   alert("アニマルIDは" +  AnimalId + "です!");
   
 
@@ -1578,22 +1579,21 @@ function SetColor() {
 }
 
 function exportAsSTL(scene) {
-
-
+  var FileName = "Animal_" + AnimalId + "_" + StlOutPutId;
 
   //BABYLON.STLExport.CreateSTL(scene.meshes, true, "decal", false, false);
   BABYLON.STLExport.CreateSTL(
     scene.meshes,
     true, // download
-    'new_animal', // filename
+    FileName, // filename
     false,     // binary ?
     undefined, // little endian?
     undefined, // do not bake transform
-    undefined, // support instanced meshes
+    true, // support instanced meshes
     true  // exportIndividualMeshes
   );
 
-  alert("アニマルIDは" + StlOutPutId + "で、作成番号は" + StlOutPutId + "で書き出します.");
+  alert("アニマルIDは" + AnimalId + "で、作成番号は" + StlOutPutId + "で書き出します.(" + FileName + ")");
   StlOutPutId++;
 
 }
