--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ var createScene = async function () {
 
 
   
-  alert("アニマルIDは" +  AnimalId + "です!");
+  //alert("アニマルIDは" +  AnimalId + "です!");
   
 
 
